# pyvax-cli

./: .gitignore  =1.0.0  DEPLOYMENT_GUIDE.md  FINAL_README.md  LICENSE  PYTHON_BEGINNER_GUIDE.md  README.md  deployments.json  pyproject.toml  requirements.txt  setup.py  test_contract_interaction.py  test_solidity_contract.py  test_stake_transactions.py
avax_cli/: cli.py  compiler.py  py_contracts.py  utils.py  wallet.py
contracts/: Counter.py  SimpleStorage.py  SimpleStorage.sol
examples/: stake_token_examples.py
my_project/: avax.bat  deployments.json
my_project/contracts/: BeginnerToken.py  Defi.py  StakeToken.py  VotingContract.py  mint.py
my_project/scripts/: deploy.py
nea/: avax_config.json
nea/scripts/: deploy.py
new/: deployments.json
new/scripts/: deploy.py
test_project/contracts/: SimpleStorage.sol
test_project/scripts/: deploy.py
