[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avax-cli"
version = "0.1.0"
description = "Production-ready CLI tool for deploying Solidity and Python smart contracts to Avalanche C-Chain"
authors = [
    {name = "PyVax Developer", email = "dev@pyvax.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["avalanche", "blockchain", "smart-contracts", "cli", "python", "solidity", "evm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "web3>=6.0.0",
    "eth-account>=0.8.0",
    "py-solc-x>=2.0.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pyvax/avax-cli"
Documentation = "https://github.com/pyvax/avax-cli#readme"
Repository = "https://github.com/pyvax/avax-cli.git"
"Bug Tracker" = "https://github.com/pyvax/avax-cli/issues"

[project.scripts]
avax-cli = "avax_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["avax_cli*"]

[tool.setuptools.package-data]
avax_cli = ["*.json", "*.toml"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=avax_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
